fix overflow for chat

--- a/src/pages/GamePage/components/Chat/Chat.scss
+++ b/src/pages/GamePage/components/Chat/Chat.scss
@@ -2,15 +2,15 @@
     padding: 1rem;
     background: var(--light-dark-blue);
     flex-shrink: 2;
-    overflow: hidden;
+    overflow-y: auto;
     border-radius: 16px;
     width: min(36vw, 520px);
     padding: min(2vw, 20px) min(2vw, 20px);
-    
-    box-shadow: 
+
+    box-shadow:
         inset 0 2rem 2rem -2rem rgba(black, 0.05),
         inset 0 -2rem 2rem -2rem rgba(black, 0.05);
-    
+
     &::-webkit-scrollbar {
         width: 10px;
         background-color: var(--blue);
@@ -31,6 +31,4 @@
     }
 }
 
-@media screen and (max-width: var(--MAX-WIDTH-PHONE)) {
-
-}
+@media screen and (max-width: var(--MAX-WIDTH-PHONE)) {}
